deploy/k8s/app-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: user-management-rollout
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
      - name: user-management-container
        image: registry.local:5000/training/user-management:latest
        ports:
        - containerPort: 3000
  strategy:
    blueGreen: 
      activeService: user-management-svc
      previewService: user-management-blue-svc
      autoPromotionEnabled: true
      autoPromotionSeconds: 30
