deploy/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-svc
  labels:
    app: user-management
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: user-management

---

apiVersion: v1
kind: Service
metadata:
  name: user-management-blue-svc
  labels:
    app: user-management
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: user-management
