deploy/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management-ingress
  namespace: default  
  labels:
    app: user-management
    type: host-based
spec:
  ingressClassName: nginx
  rules:
  - host: "appusermanagementararog.loclx.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-management-web-svc
            port:
              number: 80
  - host: "app.usermanagement.training"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-management-web-svc
            port:
              number: 80
